--- a/index.html
+++ b/index.html
@@ -58,9 +58,31 @@
         background: black;
         position: absolute;
         top: 50%;
+        transform-origin: 100%;
+        transform: rotate(90deg);
+        transition: all 0.05s;
+        transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
       }
     </style>
 
-    <script></script>
+    <script>
+      const secondHand = document.querySelector(".second-hand");
+      const minHand = document.querySelector(".min-hand");
+      const hourHand = document.querySelector(".hour-hand");
+
+      function setDateAndTime() {
+        const now = new Date();
+
+        const secondDegrees = (now.getSeconds() / 60) * 360 + 90;
+        const minsDegrees = (now.getMinutes() / 60) * 360 + 90;
+        const hourDegrees = (now.getHours() / 12) * 360 + 90;
+
+        secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+        minHand.style.transform = `rotate(${minsDegrees}deg)`;
+        hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+      }
+
+      setInterval(setDateAndTime, 1000); //call set date and time every second.
+    </script>
   </body>
 </html>
